--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web/Pages/_ViewImports.cshtml
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web/Pages/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bootstrap
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bundling
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Kendo.Mvc
